--- a/note/Sistemi&Reti.html
+++ b/note/Sistemi&Reti.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="it">
-<head><meta charset="UTF-8"><title>Note di Sistemi&Reti</title></head>
+<html lang = "it">
+<head><meta charset = "UTF-8"><title>Note di Sistemi e Reti</title></head>
 <body>
-  <h1>Note di Sistemi&Reti</h1>
-  <p>Qui trovi gli appunti  di Sistemi&Reti.</p>
-  <p><a href="../note.html">Torna alle note</a></p>
+  <h1>Note di Sistemi e Reti</h1>
+  <p>Qui trovi gli appunti di Sistemi e Reti</p>
+  <p><a href = "../note.html">Torna alle Note</p>
 </body>
 </html>
