--- a/note.html
+++ b/note.html
@@ -7,8 +7,8 @@
 <body>
   <h1>Note per materia</h1>
   <ul>
-    <li><a href="note/matematica.html">Sistemi e Reti</a></li>
-    <li><a href="note/italiano.html">Informatica</a></li>
+    <li><a href="note/Sistemi&Reti.html">Sistemi e Reti</a></li>
+    <li><a href="note/Informatica.html">Informatica</a></li>
   </ul>
   <p><a href="index.html">Torna alla home</a></p>
 </body>
