--- a/note/Informatica.html
+++ b/note/Informatica.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang = "it">
-<head><meta charset = "UTF-8"><title>Note di Sistemi e Reti</title></head>
+<head><meta charset = "UTF-8"><title>Note di Informatica</title></head>
 <body>
-  <h1>Note di Sistemi e Reti</h1>
-  <p>Qui trovi gli appunti di Sistemi e Reti</p>
+  <h1>Note di Informatica</h1>
+  <p>Qui trovi gli appunti di Informatica</p>
   <p><a href = "../note.html">Torna alle Note</p>
 </body>
 </html>
