--- a/note/Sistemi&Reti.html
+++ b/note/Sistemi&Reti.html
@@ -4,6 +4,7 @@
 <body>
   <h1>Note di Sistemi e Reti</h1>
   <p>Qui trovi gli appunti di Sistemi e Reti</p>
+  <p><a href = "../note/Sistemi&Reti.html/Tipidiambientedirete.html">Tipi di Ambiente di Rete</p>
   <p><a href = "../note.html">Torna alle Note</p>
 </body>
 </html>
