--- a/note/Sistemi&Reti.html
+++ b/note/Sistemi&Reti.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang = "it">
 <head><meta charset = "UTF-8"><title>Note di Sistemi e Reti</title></head>
+<style></style>
 <body>
   <h1>Note di Sistemi e Reti</h1>
   <p>Qui trovi gli appunti di Sistemi e Reti</p>
