--- a/note/Sistemi&Reti.html
+++ b/note/Sistemi&Reti.html
@@ -3,7 +3,8 @@
 <head><meta charset = "UTF-8"><title>Note di Sistemi e Reti</title></head>
 <style>
   body{
-    background-color : blue ;
+    max-width : 800 px
+    margin : 40px auto ;
   }
 </style>
 <body>
