--- a/note/Sistemi&Reti.html
+++ b/note/Sistemi&Reti.html
@@ -3,7 +3,7 @@
 <head><meta charset = "UTF-8"><title>Note di Sistemi e Reti</title></head>
 <style>
   body{
-    max-width : 800 px
+    max-width : 800 px;
     margin : 40px auto ;
   }
 </style>
