--- a/note/Sistemi&Reti.html
+++ b/note/Sistemi&Reti.html
@@ -3,6 +3,7 @@
 <head><meta charset = "UTF-8"><title>Note di Sistemi e Reti</title></head>
 <style>
   body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-heigth : 1.6 ; 
     max-width : 800 px;
     margin : 40px auto ;
