--- a/note/isovstcp.html
+++ b/note/isovstcp.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    meta
+  </head>
 <body>
 <h1>ISO/OSI vs TCP/IP</h1>
 <p>Quando usiamo internet avvengono molti passaggi complessi, per organizzare meglio tutti questi passaggi a noi “invisibili” vengono usati 2 principali modelli che dividono la rete in livelli. </p>
@@ -19,11 +22,11 @@
 <li>Collegamento dati </li>
 <li>Fisico </li>
 </ul>
-<p>Per farci comprendere come fuco ciascun livello :</p>
+<p>Per farci comprendere come funziona la rete e’ stato creato un modello teorico il modello ISO/OSI che  divide la rete in 7 livelli , ogni livello comunica solo con quelli che gli sono vicini (per esempio il livello della sessione puo’ comunicare solo con la presentazione e il trasporto).</p>
+<p>Adesso analizziamo nello specifico ciascun livello :</p>
 <ul>
 <li>Applicazione : e’ il livello che mostra all‘ utente l’ interfaccia finale es: l’ interfaccia di un sito.</li>
-<li>Presentazione: ha il conziona la rete e’ stato creato un modello teorico il modello ISO/OSI che  divide la rete in 7 livelli , ogni livello comunica solo con quelli che gli sono vicini (per esempio il livello della sessione puo’ comunicare solo con la presentazione e il trasporto).</p>
-<p>Adesso analizziamo nello specifimpito di tradurre le informazioni che vengono dal livello della sessione nel formato dell’applicazione e viceversa. Un altro compito per questo livello e’ quello della compressione e la crittografia dei dati. </li>
+<li>Presentazione: ha il compito di tradurre le informazioni che vengono dal livello della sessione nel formato dell’applicazione e viceversa. Un altro compito per questo livello e’ quello della compressione e la crittografia dei dati. </li>
 <li>Sessione : ha il compito di gestire le connessioni tra le applicazioni. In caso di interruzione della connessione essa e’ riavviata nuovamente. Gestisce anche la direzione della connessione e si assicura dell’avvenimento di una connessione prima di avviarne un altra. </li>
 <li>Trasporto :Invia i dati attraverso un canale creato dal livello di sessione. I dati vengono suddivisi in segmenti, che vengono inviati uno dopo l'altro alla stazione di destinazione.
 In caso di perdita o danneggiamento di un segmento, è possibile richiederne la ritrasmissione; la stazione di destinazione può anche inviare una conferma di ricezione del segmento.</li>
@@ -42,8 +45,29 @@ Non controlla gli errori, ma definisce i segnali, le frequenze, i connettori, e 
 <p></p>
 <p>Enkapsulazione: è il processo con cui ogni livello aggiunge un’intestazione (header) ai dati prima di passarli al livello inferiore.</p>
 <p>
-Dekapsulazione: è il processo inverso, che avviene alla ricezione dei dati, rimuovendo i vari header strato per strato.
-
-</p>
+Dekapsulazione: è il processo inverso, che avviene alla ricezione dei dati, rimuovendo i vari header strato per strato.</p>
+<h2>Modello TCP/IP</h2>
+<p>Il modello TCP/IP (Transmission Control Protocol / Internet Protocol) è il modello reale usato oggi su Internet. A differenza del modello ISO/OSI che è teorico, TCP/IP è pratico e implementato realmente nelle reti.</p>
+<p>È composto da 4 livelli principali, ognuno con compiti precisi nella comunicazione.</p>
+<p>I livelli del modello TCP/IP sono:</p>
+<ul>
+<li>Applicazione(che ha i compiti dei livelli di applicazione, presentazione e sessione nel modello ISO/OSI)</li>
+<li>Trasporto</li>
+<li>Internet</li>
+<li>Accesso alla rete (o livello di rete fisica)</li>
+</ul>
+<p>Ora analizziamo ciascun livello nel dettaglio:</p>
+<ul>
+<li>Applicazione: e’ il livello che si trova piu’ in alto, cioe’ quello con cui l’ utente interagisce in modo diretto. In questo livello si trovano tutte le app che utilizzi. Ha inoltre la funzione di ponte tra le applicazioni e i livelli piu’ bassi . Qui operano anche diversi protocolli come : HTTP, FTP, SMTP, DNS etc. Questo livello funge anche da formattatore di dati, cosi’ che sia chi riceve che chi invia  possa capire i dati, crittografa inoltre i dati e infine gestisce le connessioni .</li>
+<li>Trasporto :  questo livello ha il compito di assicurarsi che i dati arrivino e che lo facciano nell’ordine corretto .Esso usa principalmente 2 protocolli : <ul>
+<li>TCP : questo protocollo si usa quando i dati devono essere corretti e completi, come quando scarichi qualcosa online. Infatti controlla gli errori , rimanda i segmenti mancanti e lo fa in modo ordinato </li>
+<li>UDP : a differenza del TCP questo protocollo e’ piu’ veloce ma meno accurato, questo viene infatti usato quando e’ piu’ importante che i dati vengano inviati velocemente, perdendo pero’ la precisione.Per esempio quando giochi o fai chiamate online .</li>
+</ul></li>
+<li>Internet : il compito di questo livello e’ quello di trovare il percorso migliore per i dati, cosi che essi arrivino in modo corretto a destinazione. Per aiutare ad identificare ogni dispositivo questo livello assegna ai dispositivi un indirizzo IP unico . Si occupa inoltre di inoltrare i dati da un dispositivo all’altro e della frammentazione dei dati in pachetti.</li>
+<li>Accesso alla rete : questo livello si trova sul fondo del modello TCP/IP, ha il compito di assicurarsi la connessione fisica tra i dispositivi collegati alla stessa rete locale , come un computer connesso via cavo o al Wi-Fi .Si assicura che i dati possano passare oltre l’ hardware, per esempio una switch o segnali wireless . Gestisce infine l ‘ utilizzo degli indirizzi MAC per i identificare i dispositivi, il controllo dei frame(l’unita usata in questo livello)  e il controllo degli errori di base durante la trasmissione. </li>
+</ul>
+<h3>Perchè usiamo il modello TCP/IP e non l’ ISO/OSI ?</h3>
+<table border='1'><tr><td>Ragione</td><td>Spiegazione</td></tr><tr><td>Struttura più semplice</td><td>TCP/IP ha solo 4 livelli, rispetto ai 7 dell'OSI, il che lo rende più facile da implementare e comprendere nei sistemi reali.</td></tr><tr><td>Progettazione basata su protocollo</td><td>TCP/IP è stato progettato sulla base di protocolli funzionanti, mentre il modello OSI è più un quadro teorico.</td></tr><tr><td>Flessibilità e robustezza</td><td>TCP/IP si adatta bene a diversi hardware e reti e include la gestione degli errori, il routing e il controllo della congestione.</td></tr><tr><td>Standard aperto</td><td>TCP/IP è aperto, gratuito e non controllato da una singola organizzazione, il che lo aiuta a ottenere l'accettazione universale.</td></tr><tr><td>Uso effettivo vs modello concettuale</td><td>Il modello OSI è ottimo per l'istruzione e i principi di progettazione, ma TCP/IP è quello effettivamente utilizzato nelle reti del mondo reale</td></tr></table>
+<p>Ora abbiamo finalmente capito come funzionano i due modelli principali usati per spiegare la rete!</p>
 </body>
 </html>
