--- a/note/isovstcp.html
+++ b/note/isovstcp.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
 <html>
   <head>
-    meta
+    <meta language >
+    <meta charset="UTF-8" />
+    <title><>
   </head>
 <body>
 <h1>ISO/OSI vs TCP/IP</h1>
