--- a/note/isovstcp.html
+++ b/note/isovstcp.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
   <head>
-    <meta language >
     <meta charset="UTF-8" />
-    <title><>
+    <title>ISO/OSI vs TPC/IP</title>
+    <script>
+      
+    </script>
   </head>
 <body>
 <h1>ISO/OSI vs TCP/IP</h1>
