--- a/note/isovstcp.html
+++ b/note/isovstcp.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>ISO/OSI vs TPC/IP</title>
-    <script>
-      
-    </script>
+    <style>
+      body{
+        
+      }
+    </style>
+
   </head>
 <body>
 <h1>ISO/OSI vs TCP/IP</h1>
