--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MyNotes</title>
-  <style>
-    body { font-family: Arial, sans-serif; max-width: 700px; margin: 0 auto; padding: 20px; }
-    h1, h2 { color: #333; }
-    a { color: royalblue; text-decoration: none; }
-    nav a { margin-right: 15px; }
-  </style>
+  <link rel="stylesheet" href="SS.css">
 </head>
 <body>
   <h1>Benvenuto nel mio sito</h1>
