--- a/articoli.html
+++ b/articoli.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Articoli</title>
+  <link rel="stylesheet" href="SS.css">
 </head>
 <body>
   <h1>Articoli</h1>
