--- a/note.html
+++ b/note.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Note scolastiche</title>
+  <link rel="stylesheet" href="SS.css">
 </head>
 <body>
   <h1>Note per materia</h1>
