--- a/note/Informatica.html
+++ b/note/Informatica.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang = "it">
-<head><meta charset = "UTF-8"><title>Note di Informatica</title></head>
+<head><meta charset = "UTF-8">
+<title>Note di Informatica</title></head>
+<link rel="stylesheet" href="SS.css">
 <body>
   <h1>Note di Informatica</h1>
   <p>Qui trovi gli appunti di Informatica</p>
