--- a/note/Sistemi&Reti.html
+++ b/note/Sistemi&Reti.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang = "it">
-<head><meta charset = "UTF-8"><title>Note di Sistemi e Reti</title></head>
-<style>
-  body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    line-heigth : 1.6 ; 
-    max-width : 800 px;
-    margin : 40px auto ;
-    padding : 0  20px;
-  }
-</style>
+<head>
+<meta charset = "UTF-8">
+<title>Note di Sistemi e Reti</title></head>
+<link rel="stylesheet" href="SS.css">
 <body>
   <h1>Note di Sistemi e Reti</h1>
   <p>Qui trovi gli appunti di Sistemi e Reti</p>
