--- a/note/Tipidiambientedirete.html
+++ b/note/Tipidiambientedirete.html
@@ -3,42 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Tipi di ambienti di rete</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 0 20px;
-      line-height: 1.6;
-      color: #333;
-      background: #f9f9f9;
-    }
-    h1 {
-      color: #004080;
-      border-bottom: 3px solid #004080;
-      padding-bottom: 10px;
-      margin-bottom: 30px;
-    }
-    h3 {
-      color: #0066cc;
-      margin-top: 30px;
-      margin-bottom: 15px;
-    }
-    p {
-      font-size: 1.1em;
-      margin-bottom: 15px;
-    }
-    ul {
-      background: #e6f0ff;
-      padding: 15px 25px;
-      border-radius: 8px;
-      list-style-type: disc;
-      margin-bottom: 25px;
-    }
-    ul li {
-      margin-bottom: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="SS.css">
 </head>
 <body>
   <h1>TIPI DI AMBIENTI DI RETE</h1>
