--- a/note/isovstcp.html
+++ b/note/isovstcp.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>ISO/OSI vs TPC/IP</title>
-    <style>
-      body{
-        
-      }
-    </style>
+    <link rel="stylesheet" href="SS.css">
 
   </head>
 <body>
