--- a/note/Informatica.html
+++ b/note/Informatica.html
@@ -2,6 +2,7 @@
 <html lang = "it">
 <head><meta charset = "UTF-8">
 <title>Note di Informatica</title></head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="SS.css">
 <body>
   <h1>Note di Informatica</h1>
