--- a/note/Sistemi&Reti.html
+++ b/note/Sistemi&Reti.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset = "UTF-8">
 <title>Note di Sistemi e Reti</title></head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="SS.css">
 <body>
   <h1>Note di Sistemi e Reti</h1>
