--- a/note/Tipidiambientedirete.html
+++ b/note/Tipidiambientedirete.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Tipi di ambienti di rete</title>
   <link rel="stylesheet" href="SS.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <h1>TIPI DI AMBIENTI DI RETE</h1>
