--- a/note.html
+++ b/note.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Note scolastiche</title>
   <link rel="stylesheet" href="SS.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <h1>Note per materia</h1>
