--- a/note/Informatica.html
+++ b/note/Informatica.html
@@ -3,7 +3,7 @@
 <head><meta charset = "UTF-8">
 <title>Note di Informatica</title></head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="IT-Forgs/SS.css">
+<link rel="stylesheet" href="../SS.css">
 <body>
   <h1>Note di Informatica</h1>
   <p>Qui trovi gli appunti di Informatica</p>
