--- a/note/isovstcp.html
+++ b/note/isovstcp.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>ISO/OSI vs TPC/IP</title>
-    <link rel="stylesheet" href="SS.css">
+    <link rel="stylesheet" href="../SS.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
