--- a/articoli/articolo1.html
+++ b/articoli/articolo1.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="it">
-<head><meta charset="UTF-8"><title>Articolo 1</title></head>
+<head>
+<meta charset="UTF-8">
+<title>Articolo 1</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link >
+</head>
 <body>
   <h1>Il mio primo articolo</h1>
   <p>Questo è un articolo di esempio.</p>
