--- a/articoli/articolo1.html
+++ b/articoli/articolo1.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Articolo 1</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link >
+<link rel="stylesheet" href= "../SS.css" >
 </head>
 <body>
   <h1>Il mio primo articolo</h1>
