--- a/whoami.html
+++ b/whoami.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8" />
+  <title>Chi sono ?</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="SS.css">
+</head>
+<body>
+  <h1>Chi sono ? </h1>
+  <ul>
+    <li><a href="articoli/articolo1.html">Non lo scoprirai mai shhh!</a></li>
+    
+  </ul>
+  <p><a href="index.html">Torna alla home</a></p>
+</body>
+</html>
