--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
   <h1>Benvenuto nel mio sito</h1>
   <nav>
-    <a href="articoli.html">Articoli</a>
+    <a href="articoli.html">Articoli(Ancora non ce ne sono)</a>
     <a href="note.html">Note scolastiche</a>
   </nav>
   <p>Qui pubblico appunti e articoli scritti da me. Buona lettura!(Se vuoi pagarmi ...)</p>
+  <p>Questo sito, creato da me Francesco Forganni, potrebbe essere per te una salvezza o una inutile pagina nel deep web(si sei nel deep web), questo dipendera' 
+  te, spero' che questo sito ti sara' utile!</p>
 </body>
 </html>
