--- a/whoami.html
+++ b/whoami.html
@@ -8,10 +8,9 @@
 </head>
 <body>
   <h1>Chi sono ? </h1>
-  <ul>
-    <li><a href="articoli/articolo1.html">Non lo scoprirai mai shhh!</a></li>
-    
-  </ul>
+  <p>Io sono colui che ti portera' sulla via della verita'.</p>
+  <p>Si , io sono il tuo Salvatore, ma solo se mi segui su <a href="https://www.instagram.com/fforganni/">INSTAGRAM</a></p>
+  
   <p><a href="index.html">Torna alla home</a></p>
 </body>
 </html>
