--- a/whoami.html
+++ b/whoami.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Chi sono ? </h1>
   <p>Io sono colui che ti portera' sulla via della verita'.</p>
-  <p>Si , io sono il tuo Salvatore, ma solo se mi segui su <a href="https://www.instagram.com/fforganni/">INSTAGRAM</a></p>
+  <p>Si , io sono il tuo salvatore, ma solo se mi segui su <a href="https://www.instagram.com/fforganni/">INSTAGRAM</a></p>
   
   <p><a href="index.html">Torna alla home</a></p>
 </body>
