--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <p>Qui pubblico appunti e articoli scritti da me. Buona lettura!(Se vuoi pagarmi ...)</p>
   <p>Questo sito, creato da me <a href="whoami.html">Francesco Forganni</a>, potrebbe essere per te una salvezza o un inutile pagina nel deep web(si sei nel deep web), questo dipendera' te!</p>
   <p>P.S. sto programmando questo sito direttamente da github, perche' mi secco ad averlo in locale, ma fa schifo fare cosi' perche' non so come usare tutte le shortcut che avevo sul mio amato <a href="https://code.visualstudio.com/">VSC</a>(scarica anche tu vsc se vuoi diventare un vero programmatore!)</p>
-  
+  <break>
 </body>
 </html>
