--- a/note/Tipidiambientedirete.html
+++ b/note/Tipidiambientedirete.html
@@ -30,7 +30,7 @@
   <p>In questo modello esiste almeno un computer con ruolo di server, il quale gestisce, conserva e distribuisce le risorse.</p>
   <p>Il server utilizza un sistema operativo di rete che gli permette di svolgere questi compiti (es. gestione utenti, file, stampanti).</p>
   <p>Le stazioni di lavoro (client) si connettono al server utilizzando un software client per accedere ai servizi.</p>
-  <a href="tipi_ambienti_direte.pdf" download>
+  <a href="https://github.com/fraffos/IT-Forgs/blob/main/tipi_ambienti_direte.pdf" download>
     <button>Scarica in pdf</button>
   </a>
 </body>
