--- a/note/Sistemi&Reti.html
+++ b/note/Sistemi&Reti.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Note di Sistemi e Reti</h1>
   <p>Qui trovi gli appunti di Sistemi e Reti</p>
-  <p><a href = "note/storia_dei_Calcolatori.html">La storia dei calcolatori</p>
+  <p><a href = "../note/storia_dei_Calcolatori.html">La storia dei calcolatori</p>
   <p><a href = "../note/Tipidiambientedirete.html">Tipi di Ambiente di Rete</p>
   <p><a href = "../note/isovstcp.html">Modello ISO-OSI</p>
   <p><a href = "../note.html">Torna alle Note</p>
