--- a/note/Sistemi&Reti.html
+++ b/note/Sistemi&Reti.html
@@ -9,6 +9,7 @@
   <h1>Note di Sistemi e Reti</h1>
   <p>Qui trovi gli appunti di Sistemi e Reti</p>
   <p><a href = "../note/storia_dei_Calcolatori.html">La storia dei calcolatori</p>
+  <p><a href = "../note/Architettura di Von Neumann 2ace48675e3880e58808f552a93d655b.html">Architettura di Von Neumann</p>
   <p><a href = "../note/Tipidiambientedirete.html">Tipi di Ambiente di Rete</p>
   <p><a href = "../note/isovstcp.html">Modello ISO-OSI</p>
   <p><a href = "../note.html">Torna alle Note</p>
